// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Picker/> render picker base props 1`] = `
<div>
  <div
    class="fnx-picker"
  >
    <div
      class="fnx-picker__columns"
      style="height: 264px;"
    >
      <div
        class="fnx-picker-column"
      >
        <ul
          class="fnx-picker-column__wrapper"
          style="transform: translate3d(0, 110px, 0);"
        >
          <li
            class="fnx-picker-column__option fnx-picker-column__option--selected"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1990
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1991
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1992
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1993
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1994
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1995
            </div>
          </li>
        </ul>
      </div>
      <div
        class="fnx-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="fnx-picker__frame fnx-hairline-unset--top-bottom"
        style="height: 44px;"
      />
    </div>
    <div
      class="fnx-picker__toolbar"
    >
      <button
        class="fnx-picker__cancel"
        type="button"
      >
        取消
      </button>
      <div
        class="fnx-picker__title fnx-ellipsis"
      >
        单选标题
      </div>
      <button
        class="fnx-picker__confirm"
        type="button"
      >
        确定
      </button>
    </div>
  </div>
</div>
`;

exports[`<Picker/> render picker defined title、cancel、confirm 1`] = `
<div>
  <div
    class="fnx-picker"
  >
    <div
      class="fnx-picker__toolbar"
    >
      <span>
        defined cancel button
      </span>
      <span>
        defined title
      </span>
      <span>
        defined confirm button
      </span>
    </div>
    <div
      class="fnx-picker__columns"
      style="height: 264px;"
    >
      <div
        class="fnx-picker-column"
      >
        <ul
          class="fnx-picker-column__wrapper"
          style="transform: translate3d(0, 110px, 0);"
        >
          <li
            class="fnx-picker-column__option fnx-picker-column__option--selected"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1990
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1991
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1992
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1993
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1994
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1995
            </div>
          </li>
        </ul>
      </div>
      <div
        class="fnx-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="fnx-picker__frame fnx-hairline-unset--top-bottom"
        style="height: 44px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Picker/> render picker do not show title、conform、cancel 1`] = `
<div>
  <div
    class="fnx-picker"
  >
    <div
      class="fnx-picker__toolbar"
    />
    <div
      class="fnx-picker__columns"
      style="height: 264px;"
    >
      <div
        class="fnx-picker-column"
      >
        <ul
          class="fnx-picker-column__wrapper"
          style="transform: translate3d(0, 110px, 0);"
        >
          <li
            class="fnx-picker-column__option fnx-picker-column__option--selected"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1990
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1991
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1992
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1993
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1994
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 44px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1995
            </div>
          </li>
        </ul>
      </div>
      <div
        class="fnx-picker__mask"
        style="background-size: 100% 110px;"
      />
      <div
        class="fnx-picker__frame fnx-hairline-unset--top-bottom"
        style="height: 44px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Picker/> set picker optionHeight、visibleOptionsCount 1`] = `
<div>
  <div
    class="fnx-picker"
  >
    <div
      class="fnx-picker__toolbar"
    >
      <button
        class="fnx-picker__cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="fnx-picker__confirm"
        type="button"
      >
        Confirm
      </button>
    </div>
    <div
      class="fnx-picker__columns"
      style="height: 120px;"
    >
      <div
        class="fnx-picker-column"
      >
        <ul
          class="fnx-picker-column__wrapper"
          style="transform: translate3d(0, 45px, 0);"
        >
          <li
            class="fnx-picker-column__option fnx-picker-column__option--selected"
            role="button"
            style="height: 30px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1990
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 30px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1991
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 30px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1992
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 30px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1993
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 30px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1994
            </div>
          </li>
          <li
            class="fnx-picker-column__option"
            role="button"
            style="height: 30px;"
            tabindex="0"
          >
            <div
              class="fnx-ellipsis"
            >
              1995
            </div>
          </li>
        </ul>
      </div>
      <div
        class="fnx-picker__mask"
        style="background-size: 100% 45px;"
      />
      <div
        class="fnx-picker__frame fnx-hairline-unset--top-bottom"
        style="height: 30px;"
      />
    </div>
  </div>
</div>
`;
